[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Items/wing_left.png" type="Texture" id=1]
[ext_resource path="res://game/character/MainCharacter.gd" type="Script" id=2]
[ext_resource path="res://assets/Players/bunny1_walk1.png" type="Texture" id=3]
[ext_resource path="res://assets/Players/bunny1_jump.png" type="Texture" id=4]
[ext_resource path="res://assets/Players/bunny1_hurt.png" type="Texture" id=5]
[ext_resource path="res://assets/Items/wing_right.png" type="Texture" id=6]
[ext_resource path="res://assets/sfx/Jump 6.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/Players/bunny1_walk2.png" type="Texture" id=8]
[ext_resource path="res://assets/Players/bunny1_stand.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 44.2735
height = 46.2841

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "saltar",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "correr",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "aclarar"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("wing_right:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_left:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "entrar_portal"
tracks/0/type = "value"
tracks/0/path = NodePath("animation:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "oscurecer"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -40.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 0.0, 40.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wing_left:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("wing_right:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 55.7551, 4.68294 )

[sub_resource type="CapsuleShape2D" id=9]
radius = 46.6667
height = 46.6667

[node name="MainCharacter" type="KinematicBody2D" groups=[
"player",
]]
scale = Vector2( 0.9, 0.9 )
z_index = 50
z_as_relative = false
collision_layer = 3
collision_mask = 28
script = ExtResource( 2 )
velocidad = Vector2( 600, 900 )
acel_caida = 280
acel_caida_power_up = 70

[node name="wing_right" type="Sprite" parent="."]
visible = false
position = Vector2( 28.6964, -84.2718 )
texture = ExtResource( 6 )
offset = Vector2( 40.3036, -13.7282 )

[node name="wing_left" type="Sprite" parent="."]
visible = false
position = Vector2( -28.1026, -84.5661 )
texture = ExtResource( 1 )
offset = Vector2( -40.8974, -13.7282 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.445419, -68.5992 )
z_index = 30
shape = SubResource( 1 )

[node name="animation" type="AnimatedSprite" parent="."]
position = Vector2( 0, -96.1746 )
frames = SubResource( 2 )
animation = "hurt"

[node name="AudioSalto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -23.264

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -4.44444, -1.11111 )
current = true
zoom = Vector2( 2.2, 2.2 )
limit_left = 0
limit_bottom = 1200
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aclarar = SubResource( 3 )
anims/default = SubResource( 4 )
anims/entrar_portal = SubResource( 5 )
anims/oscurecer = SubResource( 6 )
anims/volar = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.96967 )
shape = SubResource( 8 )

[node name="EnfriamientoPowerUpJump" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="EnfriamientoPoweUpFly" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.509804, 0.0235294, 0.756863, 1 )
position = Vector2( 0, -71.1111 )
shape = SubResource( 9 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EnfriamientoPowerUpJump" to="." method="_on_EnfriamientoPowerUp_timeout"]
[connection signal="timeout" from="EnfriamientoPoweUpFly" to="." method="_on_EnfriamientoPoweUpFly_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
